# boids_project

./: .gitignore  CMakeLists.txt  boid.cpp  boid.hpp  boid.test.cpp  boids.cpp  boids.hpp  boids.test.cpp  flock.cpp  flock.hpp  flock.test.cpp  graphics.cpp  graphics.hpp  main-sfml.cpp  main.cpp  parameters.hpp  parameters.test.cpp  parser-sfml.hpp  parser.hpp  stats.cpp  stats.hpp  stats.test.cpp
